hphp/hack/test/typecheck/higher_kinded_types/alias_with_implicit_constraints_unsupported1.php.rust_elab.exp
File "alias_with_implicit_constraints_unsupported1.php", line 5, characters 17-17:
Please make your type parameter start with the letter `T` (capital) (Naming[2042])
File "alias_with_implicit_constraints_unsupported1.php", line 12, characters 20-41:
Wrong number of type arguments (expected 1, got 0) (Typing[4101])
  File "alias_with_implicit_constraints_unsupported1.php", line 7, characters 6-27:
  Definition is here
File "alias_with_implicit_constraints_unsupported1.php", line 12, characters 20-41:
The type WithImplicitConstraint implicitly imposes constraints on its type parameters. Therefore, it cannot be used as a higher-kinded type at this time. (Typing[4456])
  File "alias_with_implicit_constraints_unsupported1.php", line 7, characters 6-27:
  The definition of WithImplicitConstraint is here.
  File "alias_with_implicit_constraints_unsupported1.php", line 7, characters 34-41:
  The definition of WithImplicitConstraint relies on TakesNum and the constraints that TakesNum imposes on its type parameter T then become implicit constraints on the type parameter T of WithImplicitConstraint.
